--- a/base_di_partenza/assets/css/style.css
+++ b/base_di_partenza/assets/css/style.css
@@ -132,6 +132,7 @@ h1 {
 h1 span {
   position: relative;
   z-index: 0;
+  display: inline-block;
 }
 span img {
   z-index: -1;
@@ -371,6 +372,20 @@ footer a {
   box-shadow: 0 10px 30px rgb(0 0 0 / 10%);
   padding: 16px;
   border: 3px solid white;
+}
+.social {
+  position: fixed;
+  right: 0;
+  width: 50px;
+  height: 140px;
+  bottom: 1%;
+}
+.social .far {
+  right: 0;
+  position: relative;
+}
+.toTop {
+  position: absolute;
   right: 0;
 }
 
